--- a/app/src/main/res/layout/activity_cinema.xml
+++ b/app/src/main/res/layout/activity_cinema.xml
@@ -10,13 +10,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <ImageView
             android:id="@+id/imageDetail"
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_weight="1"
+            android:layout_marginVertical="10dp"
             android:contentDescription="@string/imgDetailDescription"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_launcher_foreground" />
@@ -34,24 +37,55 @@
                 android:layout_weight="2"
                 android:text="Нравится"
                 android:layout_marginStart="20dp"
-                android:textSize="18sp"/>
+                android:layout_marginBottom="10dp"
+                android:textSize="18sp"
+                tools:ignore="NestedWeights" />
 
             <Button
                 android:id="@+id/inviteFriend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:layout_marginBottom="10dp"
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
-                android:text="Пригласить" />
+                android:text="@string/inviteText"
+                tools:ignore="RtlHardcoded" />
         </LinearLayout>
+
+        <EditText
+            android:id="@+id/commentText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:hint="@string/commentText"
+            android:textColor="#757575"
+            android:autofillHints="no"
+            android:inputType="textAutoCorrect"
+            />
+
+        <TextView
+            android:id="@+id/titleDetail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textDetail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="20dp"
+            android:paddingHorizontal="20dp"
+            android:paddingBottom="20dp"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:textSize="24sp"
