--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -6,6 +6,13 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardImageView"
+        android:layout_width="155dp"
+        android:layout_height="230dp"
+        tools:ignore="MissingConstraints"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="20dp">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="155dp"
@@ -13,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
-
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/titleView"
         android:layout_width="0dp"
@@ -27,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/imageView"
+        app:layout_constraintStart_toEndOf="@id/cardImageView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05"
         tools:text="@tools:sample/lorem" />
