--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:background="?android:attr/selectableItemBackground"
+<androidx.constraintlayout.widget.ConstraintLayout android:background="?android:attr/selectableItemBackground"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,14 +13,14 @@
         tools:ignore="MissingConstraints"
         app:cardElevation="0dp"
         app:cardCornerRadius="20dp">
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="155dp"
             android:layout_height="230dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@tools:sample/avatars"
-            />
+            tools:src="@tools:sample/avatars" />
     </androidx.cardview.widget.CardView>
 
 
@@ -50,4 +49,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
