--- a/app/src/main/res/layout/activity_cinema.xml
+++ b/app/src/main/res/layout/activity_cinema.xml
@@ -6,53 +6,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/background_light"
     tools:context=".presentation.view.cinemaList.CinemaActivity">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle">
+
             <ImageView
                 android:id="@+id/imageDetail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:contentDescription="@string/imgDetailDescription"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/ic_launcher_foreground"
-                app:layout_collapseMode="parallax"
-                android:background="@color/white"
-                />
+                app:layout_collapseMode="parallax" />
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="parallax"
                 app:title=""
-                app:titleTextColor="@color/white"
-                />
+                app:titleTextColor="@color/white" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:focusable="true"
             android:focusableInTouchMode="true">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
+
                 <CheckBox
                     android:id="@+id/checkBoxLike"
                     android:layout_width="wrap_content"
@@ -63,6 +68,7 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="18sp"
                     tools:ignore="NestedWeights" />
+
                 <Button
                     android:id="@+id/buttonInvite"
                     android:layout_width="wrap_content"
@@ -74,6 +80,7 @@
                     android:text="@string/buttonInvite"
                     tools:ignore="RtlHardcoded" />
             </LinearLayout>
+
             <EditText
                 android:id="@+id/commentText"
                 android:layout_width="match_parent"
@@ -86,6 +93,7 @@
                 android:inputType="textAutoCorrect"
                 android:minHeight="48dp"
                 android:textColor="#757575" />
+
             <TextView
                 android:id="@+id/textDetail"
                 android:layout_width="match_parent"
