--- a/app/src/main/res/layout/activity_cinema.xml
+++ b/app/src/main/res/layout/activity_cinema.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/background_light"
-    tools:context=".presentation.view.cinemaList.CinemaActivity">
+    tools:context=".presentation.view.detail.CinemaActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
