--- a/app/src/main/res/layout/activity_cinema.xml
+++ b/app/src/main/res/layout/activity_cinema.xml
@@ -68,8 +68,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
                     android:textSize="18sp"
-                    android:layout_weight="1"
-                    />
+                    android:layout_weight="1" />
 
                 <ImageButton
                     android:id="@+id/imageInvite"
@@ -80,12 +79,12 @@
                     android:src="@drawable/ic_baseline_share_24" />
 
                 <ImageButton
-                    android:id="@+id/imageReminder"
+                    android:id="@+id/imageShedule"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:contentDescription="Посмотреть позже"
                     android:src="@drawable/ic_baseline_access_time_24"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="right" />
             </LinearLayout>
 
             <EditText
