--- a/app/src/main/res/menu/bottom_navigate.xml
+++ b/app/src/main/res/menu/bottom_navigate.xml
@@ -8,4 +8,8 @@
         android:id="@+id/nav_favourite"
         android:icon="@drawable/ic_baseline_stars_24"
         android:title="Избранное" />
+    <item
+        android:id="@+id/nav_shedule"
+        android:icon="@drawable/ic_baseline_notifications_24"
+        android:title="Смотреть позже" />
 </menu>
