--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -8,15 +8,15 @@
     android:background="@color/recycleBackground">
 
     <TextView
-        android:id="@+id/titleShedule"
+        android:id="@+id/titleSchedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingLeft="10dp"
-        android:text="@string/sheduleTitle"
-        app:layout_constraintBottom_toBottomOf="@id/recyclerViewShedule"
+        android:text="@string/ScheduleTitle"
+        app:layout_constraintBottom_toBottomOf="@id/recyclerViewSchedule"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
@@ -24,15 +24,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewShedule"
+        android:id="@+id/recyclerViewSchedule"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleShedule"
-        tools:listitem="@layout/shedule_item" />
+        app:layout_constraintTop_toBottomOf="@+id/titleSchedule"
+        tools:listitem="@layout/schedule_item" />
 
     <TextView
         android:id="@+id/emptyList"
@@ -42,9 +42,9 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/recyclerViewShedule"
+        app:layout_constraintBottom_toBottomOf="@id/recyclerViewSchedule"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewShedule" />
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewSchedule" />
 </androidx.constraintlayout.widget.ConstraintLayout>
